--- a/css/style.css
+++ b/css/style.css
@@ -35,15 +35,15 @@ body{
     clip-path: polygon(0 0, 100% 0, 100% 75%, 0 100%);
     position: relative;
 }
-.logo-box{
+.header__logo-box{
     position: absolute;
     top: 4rem;
     left: 4rem;
 }
-.logo{
+.header__logo{
     height: 3.5rem;
 }
-.text-box{
+.header__text-box{
     position: absolute;
     top: 40%;
     left: 50%;
@@ -140,7 +140,7 @@ body{
     transform: translateY(-1px);
     box-shadow: 0 .5rem 1rem rgba(0,0,0,.2);
 }
-.btn-white {
+.btn--white {
     background-color: #fff;
     color: #777;
 }
@@ -156,14 +156,14 @@ body{
     z-index: -1;
     transition: all .4s;
 }
-.btn-white::after{
+.btn--white::after{
     background-color: #fff;
 }
 .btn:hover::after{
     transform: scaleX(1.4) scaleY(1.6);
     opacity: 0;
 }
-.btn-animated{
+.btn--animated{
     animation: moveInBottom .5s ease-out .75s;
     animation-fill-mode: backwards;
 }
